[Java] Detect an actual SBE schema version from the ArchiveMarkFile. Encode schema version and block length as separate fields on `MarkFileHeader` to be able to utilize `sinceVersion` SBE functionality. Align `archiveId` field offset to 8 byte boundary.